--- a/notebooks/traffic_crash_.ipynb
+++ b/notebooks/traffic_crash_.ipynb
@@ -200,8 +200,7 @@
     "        - crash month, crash time are redundant, once we have all the data consolidated in timestamp object\n",
     "- Longitude and latitude can be stored as float data type, as we need to calculate distance using those\n",
     "- drv_age can be stored as int (for easier mathematical calculations) and later we can make it categorical if needed to analyze something\n",
-    "##### I will be storing these longitude and latitude in \n",
-    "### geography data type(postgis) in psql database(for calculation ease)"
+    "- Store longitude and latitude in geography data type(postgis) in psql database(for calculation ease)"
    ]
   },
   {
@@ -226,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = bk.copy()"
+    "#data = bk.copy()"
    ]
   },
   {
@@ -413,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### keep only lat and long obtained from geo_point_2d in the json, others(longitude,latitude,geo_shape) are redundant"
+    "####  keep only lat and long obtained from geo_point_2d in the json, as others(longitude,latitude,geo_shape) are redundant"
    ]
   },
   {
