--- a/notebooks/traffic_crash_.ipynb
+++ b/notebooks/traffic_crash_.ipynb
@@ -83,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check the data type of the dataframe columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
